# waitress_logging_poc

./: .gitignore  README.md  app.py  logconfig.py  pyproject.toml
